<resources>
    <string name="app_name">CarciNoFit</string>
    <string name="google_maps_key">AIzaSyDMHZQgNW9VgABVvk4X4vpxO8EfdxWGjUc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exercises">Exercises</string>
    <string name="kg">KG</string>
    <string name="cm">CM</string>
    <string name="obliques">Obliques</string>
    <string name="running">Running</string>
    <string name="fat_burning">Fat Burning</string>
    <string name="face_yoga">Face Yoga</string>
    <string name="relaxing_yoga">Relaxing Yoga</string>
    <string name="legs">Legs</string>
    <string name="gif">gif</string>
    <string name="male"> Male </string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="all_done">All Done</string>
    <string name="profile">Profile</string>
    <string name="reminder">Reminder</string>
    <string name="rest_set">Rest Set</string>
    <string name="weekly_goal">Weekly Goal</string>
    <string name="reset_progress">Reset Progress</string>
    <string name="sync_to_google_fit">Sync To Google Fit</string>
    <string name="me">ME</string>
    <string name="restSetHeading">Rest Time (10 ~ 40 secs)</string>
    <string name="weeklyGoalHeading">Set Weekly Goal (1 ~ 7)</string>
    <string name="decrement">decrement</string>
    <string name="increment">increment</string>
    <string name="train">Train</string>
    <string name="history">History</string>
    <string name="stats">Stats</string>
    <string name="info">Info</string>
    <string name="health_data">Health Data</string>
    <string name="we_recommend_atleast_3_days_a_week">We recommend atleast 3 days a Week.</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="set">Set</string>
    <string name="minutes">Minutes</string>
    <string name="calories">Calories</string>
    <string name="workouts">Workouts</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="_0">00:00:00:00</string>
    <string name="repeat">Repeat</string>
</resources>