<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.carcinofit.ui.viewmodels.ProfileViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/weightHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/weeklyGoalHeading"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="We recommend atleast 3 days a Week."
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_below="@id/weightHeading"
            android:id="@+id/recommendTv"/>

        <ImageButton
            android:id="@+id/decrementBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recommendTv"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="15dp"
            android:layout_toStartOf="@id/durTv"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:onClick="@{()->viewModel.decrementWeeklyGoal()}"
            android:contentDescription="@string/decrement"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_remove_24"
            app:tint="@color/dimGray" />

        <TextView
            android:id="@+id/durTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recommendTv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@={viewModel.weeklyGoalText}"
            android:textColor="@color/black"
            android:textSize="33sp"
            tools:text="3" />

        <ImageButton
            android:id="@+id/incrementBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recommendTv"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/durTv"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:contentDescription="@string/increment"
            android:onClick="@{()->viewModel.incrementWeeklyGoal()}"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_add_24"
            app:tint="@color/dimGray" />

        <Button
            android:id="@+id/setBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/durTv"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:text="Set"
            android:textColor="@color/secondaryColor" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/durTv"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_toStartOf="@id/setBtn"
            android:background="@android:color/transparent"
            android:text="Cancel"
            android:id="@+id/cancelBtn"
            android:textColor="@color/black" />


    </RelativeLayout>
</layout>