<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.carcinofit.ui.viewmodels.InfoViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.InfoFragment">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/secondaryColor"
            android:fitsSystemWindows="true"
            android:title="@string/info"
            android:titleTextAppearance="@style/toolbarTextAppearance" />

        <LinearLayout
            android:id="@+id/genderRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/maleCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardCornerRadius="8dp"
                android:minWidth="104dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="12dp"
                    android:clickable="false"
                    android:text="@string/male"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    style="@style/Subtitle2"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/femaleCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardCornerRadius="8dp"
                android:minWidth="104dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="28dp"
                    android:layout_marginVertical="12dp"
                    android:clickable="false"
                    android:text="@string/female"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    style="@style/Subtitle2"
                   />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/heightRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/genderRoot"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/heightHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="Height"
                    android:textAlignment="center"
                  style="@style/Heading1"/>

                <SeekBar
                    android:id="@+id/heightSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/heightHeading"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/heightSeekBar"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:text="@={viewModel.heightText}"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:fontFamily="@font/rubik"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/heightRoot"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/weightRoot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/genderRoot"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <TextView
                        android:id="@+id/weightHeading"
                        style="@style/Heading1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/weight" />

                    <TextView
                        android:id="@+id/weightTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/weightHeading"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:text="@={viewModel.weightText}"
                        android:textColor="@color/black"
                        style="@style/Subtitle1"
                        android:textSize="28sp"
                        tools:text="50"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/weightTv"
                        android:layout_centerHorizontal="true"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/plusWeightBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:onClick="@{()->viewModel.incrementWeight()}"
                            app:cardCornerRadius="20dp">

                            <ImageView

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clickable="false"

                                android:src="@drawable/ic_baseline_add_24" />

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/minusWeightBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:onClick="@{()->viewModel.decrementWeight()}"
                            app:cardCornerRadius="20dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:clickable="false"
                                android:src="@drawable/ic_baseline_remove_24" />

                        </androidx.cardview.widget.CardView>
                    </LinearLayout>


                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ageRoot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/genderRoot"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <TextView
                        android:id="@+id/ageHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/age"
                        style="@style/Heading1" />

                    <TextView
                        android:id="@+id/ageTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ageHeading"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:text="@={viewModel.ageText}"
                        android:textColor="@color/black"
                        style="@style/Subtitle1"
                        android:textSize="28sp"
                        tools:text="20" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ageTv"
                        android:layout_centerHorizontal="true"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/plusAgeBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:onClick="@{()->viewModel.incrementAge()}"
                            app:cardCornerRadius="20dp">

                            <ImageView

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clickable="false"
                                android:src="@drawable/ic_baseline_add_24" />

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/minusAgeBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:onClick="@{()->viewModel.decrementAge()}"
                            app:cardCornerRadius="20dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:clickable="false"
                                android:src="@drawable/ic_baseline_remove_24" />

                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <Button
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:text="@string/all_done"
            android:layout_marginBottom="24dp"
            android:layout_alignParentBottom="true"
            style="@style/ButtonSecondary" />
    </RelativeLayout>
</layout>